# ScienceCompiler

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
corpora/butyrate_neuroinflammation/: README.md  REVIEWED_CORPUS_WORKFLOW.md  REVIEW_WORKFLOW.md  gold_overrides.json  manifest.json  review_overrides.json  run_corpus.sh  run_gold_corpus.sh  run_reviewed_corpus.sh
corpora/senolytics_aging/: README.md  manifest.json  run_corpus.sh
examples/: microbiome_neuroinflammation_claims.json  paper_note_template.md
examples/microbiome_notes/: paper_a.md  paper_b.md  paper_c.md  paper_d.md
examples/raw_papers/: butyrate_paper_a.txt
hackathon/: DEMO_SCRIPT.txt  FINAL_DISCORD_SUBMISSION.txt  FINAL_TWEET.txt  HACKATHON_PITCH.txt  NARRATION_SCRIPT.txt  TWEET_DRAFT.txt  WRITEUP_DRAFT.txt  generate_demo_video.py  generate_demo_video_original.py  generate_techno_bed.py
prompts/: claim_extraction_prompt.txt  claim_refinement_prompt.txt
src/science_compiler/: bucketing.py  cli.py  (+20 more)
tests/: test_bucketing.py  test_bucketing_integration.py  test_cli_smoke.py  test_compiler_curation_integration.py  test_contradictions.py  test_cross_source_ids.py  test_curation.py  test_discipline.py  test_discipline_integration.py  test_evidence.py  test_evidence_integration.py  test_experiments.py  test_extraction.py  test_llm_extract.py  test_mechanisms.py  test_note_to_report_smoke.py  test_ontology.py  test_ontology_integration.py  test_raw_pipeline_refine.py  test_refine.py  test_review_overrides.py  test_review_overrides_integration.py  test_review_queue.py
(+66 files in other folders)
